# nano-xDiT

./: .gitignore  NOTICE  README.md  bench.py  example.py  pyproject.toml  requirements.txt
examples/: custom_cache_policy.py  wan_t2v_teacache.py
nanoxdit/: __init__.py  pipeline.py
nanoxdit/cache/: __init__.py  base.py  fbcache.py  framework.py  teacache.py  wan_adapter.py
nanoxdit/cache/policies/: __init__.py  fbcache.py  perblock.py  teacache.py
tests/: bench_real.py  bench_throughput.py  test_cache_tiny.py
