[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoxdit"
version = "0.1.0"
description = "Minimal single-GPU Wan video-DiT inference with TeaCache / First-Block-Cache step-skipping"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "torch>=2.4",
    "diffusers>=0.35",
    "transformers>=4.49",
    "accelerate>=0.34",
    "ftfy",
    "numpy",
    "imageio",
    "imageio-ffmpeg",
]

[project.urls]
Homepage = "https://github.com/Antlera/nano-xDiT"

[tool.setuptools]
packages = ["nanoxdit", "nanoxdit.cache"]
